--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -43,22 +43,22 @@ services:
       - "8089:8089"
     volumes:
       - influxData:/var/lib/influxdb
-   
-  mosquitto:
-    image: eclipse-mosquitto
-    container_name: mqtt
-    network_mode: host
-    restart: always
-    volumes:
-      - mosquittoConfig:/opt/mosquitto/config:/mosquitto/config
-      - mosquittoData:/opt/mosquitto/data:/mosquitto/data
-      - mosquittoLog:/opt/mosquitto/log:/mosquitto/log
-    ports:
-      - "1883:1883"
-      - "9001:9001"  
-   
+  
+    mosquitto:
+      build: ./mosquitto
+      image: localbuild/mosquitto:april2021
+      container_name: mosquitto
+      restart: unless-stopped
+      ports: 
+        - "8883:1883"
+        - "9001:9001"
+    volumes: 
+       - mosquittoConfig:/opt/mosquitto/config:/mosquitto/config
+       - mosquittoData:/opt/mosquitto/data:/mosquitto/data
+       - mosquittoLog:/opt/mosquitto/log:/mosquitto/log 
     networks: 
       - edge
+      
 #Create internal link network for Containers
 networks:
   edge:
