--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -49,7 +49,6 @@ services:
   mosquitto:
     build: ./mosquitto
     image: localbuild/mosquitto:april2021
-    container_name: mosquitto
     restart: unless-stopped
     ports: 
       - "8883:1883"
@@ -57,7 +56,7 @@ services:
     volumes: 
       - mosquittoLog:/mosquitto/log
       - mosquittoData:/mosquitto/data
-      - mosquittoConfig:/mosquitto/config     
+      - /opt/mosquitto/config:/mosquitto/config    
     networks:
       - edge
       
@@ -72,5 +71,5 @@ volumes:
   influxData:
   mosquittoLog:
   mosquittoData:
-  mosquittoConfig:
+
   
