--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,5 @@
 version: "3"
 services:
-
   nodered: 
     build: ./nodered
     image: localbuild/nodered:april2021
@@ -12,7 +11,6 @@ services:
       - noderedData:/data
     networks:
       - edge
-      
   grafana:
     build: ./grafana
     image: localbuild/grafana:april2021
@@ -24,7 +22,6 @@ services:
       - grafanaData:/var/lib/grafana
     networks:
       - edge
-  
   influxdb:
     build: ./influx
     image: localbuild/influxdb:april2021
@@ -45,10 +42,10 @@ services:
       - influxData:/var/lib/influxdb
     networks: 
       - edge
-  
   mosquitto:
     build: ./mosquitto
     image: localbuild/mosquitto:april2021
+    container_name: mosquitto
     restart: unless-stopped
     ports: 
       - "8883:1883"
@@ -56,10 +53,8 @@ services:
     volumes: 
       - mosquittoLog:/mosquitto/log
       - mosquittoData:/mosquitto/data
-      - /opt/mosquitto/config:/mosquitto/config    
     networks:
       - edge
-      
 #Create internal link network for Containers
 networks:
   edge:
@@ -71,5 +66,3 @@ volumes:
   influxData:
   mosquittoLog:
   mosquittoData:
-
-  
