--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -42,22 +42,24 @@ services:
       - influxData:/var/lib/influxdb
     networks: 
       - edge
-      
-  mosquitto:
-    build: ./mosquitto
-    image: localbuild/mosquitto:april2021
-    container_name: mosquitto
-    restart: unless-stopped
-    ports: 
-      - "8883:1883"
-      - "9001:9001"
-    volumes: 
-      - /opt/mosquitto/config:/mosquitto/config
+  #________________________________________________________________
+  
+    mosquitto:
+      hostname: mosquitto
+      image: eclipse-mosquitto:latest
+      restart: unless-stopped
+    volumes:
+      - /opt/mosquitto/config/mosquitto.conf:/mosquitto/config/mosquitto.conf:ro
+      - /opt/mosquitto/passwd/mosquitto.passwd:/mosquitto/config/mosquitto.passwd
+      - /opt/mosquitto/log/mosquitto.log:/mosquitto/log/mosquitto.log
       - /opt/mosquitto/data:/mosquitto/data
-      - /opt/mosquitto/log:/mosquitto/log
-      
+    ports:
+      - "1883:1883"      
     networks:
       - edge
+         
+ #________________________________________________________________ 
+      
 #Create internal link network for Containers
 networks:
   edge:
