--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -42,26 +42,23 @@ services:
       - influxData:/var/lib/influxdb
     networks: 
       - edge
-  #________________________________________________________________
-  
-    mosquitto:
-      build: ./mosquitto
-      image: localbuild/mosquitto:april2021
-      container_name: mosquitto
-      restart: unless-stopped
-    volumes:
-      - /opt/mosquitto/config/mosquitto.conf:/mosquitto/config/mosquitto.conf:ro
-      - /opt/mosquitto/passwd/mosquitto.passwd:/mosquitto/config/mosquitto.passwd
-      - /opt/mosquitto/log/mosquitto.log:/mosquitto/log/mosquitto.log
-      - /opt/mosquitto/data:/mosquitto/data
-    ports:
+      
+  mosquitto:
+    build: ./mosquitto
+    image: localbuild/mosquitto:april2021
+    container_name: mosquitto
+    restart: unless-stopped
+    ports: 
       - "8883:1883"
-      - "9001:9001"     
+      - "9001:9001"
+    volumes: 
+      - /opt/mosquitto/config:/mosquitto/config
+      - /opt/mosquitto/passwd:/mosquitto/passwd
+      - /opt/mosquitto/data:/mosquitto/data
+      - /opt/mosquitto/log:/mosquitto/log
+      
     networks:
       - edge
-         
- #________________________________________________________________ 
-      
 #Create internal link network for Containers
 networks:
   edge:
@@ -71,4 +68,3 @@ volumes:
   grafanaData:
   noderedData:
   influxData:
-
