--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -46,20 +46,18 @@ services:
       - edge
       
   mosquitto:
-      build: ./mosquitto
-      image: localbuild/mosquitto:april2021
-      container_name: mosquitto
-      restart: unless-stopped
-      ports: 
+    build: ./mosquitto
+    image: localbuild/mosquitto:april2021
+    container_name: mosquitto
+    restart: unless-stopped
+    ports: 
       - "8883:1883"
       - "9001:9001"
     volumes: 
-      - /opt/mosquitto/config:/mosquitto/config
-      - /opt/mosquitto/data:/mosquitto/data
-      - /opt/mosquitto/log:/mosquitto/log
-      
+      - mosquittoLog:/mosquitto/log
+      - mosquittoData:/mosquitto/data
     networks:
-      - edge     
+      - edge
       
 #Create internal link network for Containers
 networks:
@@ -70,3 +68,4 @@ volumes:
   grafanaData:
   noderedData:
   influxData:
+  mosquittoData:
