--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -44,7 +44,22 @@ services:
       - influxData:/var/lib/influxdb
     networks: 
       - edge
-            
+  
+  mosquitto:
+    build: ./mosquitto
+    image: localbuild/mosquitto:april2021
+    container_name: mosquitto
+    restart: unless-stopped
+    ports: 
+      - "8883:1883"
+      - "9001:9001"
+    volumes: 
+      - mosquittoLog:/mosquitto/log
+      - mosquittoData:/mosquitto/data
+      
+    networks:
+      - edge  
+  
 #Create internal link network for Containers
 networks:
   edge:
@@ -54,3 +69,5 @@ volumes:
   grafanaData:
   noderedData:
   influxData:
+  mosquittoLog:
+  mosquittoData:
