--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,3 +1,4 @@
+##########################################################
 version: "3"
 services:
   nodered: 
@@ -11,7 +12,7 @@ services:
       - noderedData:/data
     networks:
       - edge
-      
+ ##########################################################     
   grafana:
     build: ./grafana
     image: localbuild/grafana:april2021
@@ -23,7 +24,7 @@ services:
       - grafanaData:/var/lib/grafana
     networks:
       - edge
-      
+##########################################################      
   influxdb:
     build: ./influx
     image: localbuild/influxdb:april2021
@@ -44,14 +45,31 @@ services:
       - influxData:/var/lib/influxdb
     networks: 
       - edge
-    
+##########################################################      
+  mosquitto:
+    build: ./mosquitto
+    image: localbuild/mosquitto:april2021
+    container_name: mosquitto  
+    restart: always
+    ports:
+      - "1883:1883"
+      - "9001:9001"    
+      - /EDMA_Docker_0.1/mqtt/config:/mosquitto/config
+      - /EDMA_Docker_0.1/mqtt/data:/mosquitto/data
+      - /EDMA_Docker_0.1/mqtt/log:/mosquitto/log    
+    networks: 
+      - edge           
+##########################################################    
 #Create internal link network for Containers
 networks:
   edge:
-
+##########################################################
 #Create Volumes for persistent Storage
 volumes:
   grafanaData:
   noderedData:
   influxData:
+  config:
+  data:
+  log:  
 
