--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -54,9 +54,9 @@ services:
     ports:
       - "1883:1883"
       - "9001:9001"    
-      - /EDMA_Docker_0.1/mqtt/config:/mosquitto/config
-      - /EDMA_Docker_0.1/mqtt/data:/mosquitto/data
-      - /EDMA_Docker_0.1/mqtt/log:/mosquitto/log    
+      - /home/daniel/EDMA_Docker_0.1/mqtt/config:/mosquitto/config
+      - /home/daniel/EDMA_Docker_0.1/mqtt/data:/mosquitto/data
+      - /home/daniel/EDMA_Docker_0.1/mqtt/log:/mosquitto/log    
     networks: 
       - edge           
 ##########################################################    
