--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -53,7 +53,8 @@ services:
     restart: always
     ports:
       - "1883:1883"
-      - "9001:9001"    
+      - "9001:9001"  
+    volumes:  
       - /home/daniel/EDMA_Docker_0.1/mqtt/config:/mosquitto/config
       - /home/daniel/EDMA_Docker_0.1/mqtt/data:/mosquitto/data
       - /home/daniel/EDMA_Docker_0.1/mqtt/log:/mosquitto/log    
