--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -54,10 +54,15 @@ services:
     ports:
       - "1883:1883"
       - "9001:9001"  
-    volumes:  
-      - /home/daniel/EDMA_Docker_0.1/mqtt/config:/mosquitto/config
-      - /home/daniel/EDMA_Docker_0.1/mqtt/data:/mosquitto/data
-      - /home/daniel/EDMA_Docker_0.1/mqtt/log:/mosquitto/log    
+    volumes:
+#old:    
+#      - /home/daniel/EDMA_Docker_0.1/mqtt/config:/mosquitto/config
+#      - /home/daniel/EDMA_Docker_0.1/mqtt/data:/mosquitto/data
+#      - /home/daniel/EDMA_Docker_0.1/mqtt/log:/mosquitto/log     
+    
+      - /EDMA_Docker_0.1/mqtt/config:/mosquitto/config
+      - /EDMA_Docker_0.1/mqtt/data:/mosquitto/data
+      - /EDMA_Docker_0.1/mqtt/log:/mosquitto/log    
     networks: 
       - edge           
 ##########################################################    
