--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,20 +31,13 @@ services:
     container_name: influxdb
     restart: unless-stopped
     environment:
-      INFLUXDB_DB: DBONE
+      INFLUXDB_DB: DBONE_test
       INFLUXDB_HTTP_AUTH_ENABLED: "true"
       INFLUXDB_ADMIN_USER: change
       INFLUXDB_ADMIN_PASSWORD: this
       INFLUXDB_USER: and_change
       INFLUXDB_USER_PASSWORD: this_too
-      
-      INFLUXDB_DB: DBTWO WITH DURATTION 1h
-      INFLUXDB_HTTP_AUTH_ENABLED: "true"
-      INFLUXDB_ADMIN_USER: changetwo
-      INFLUXDB_ADMIN_PASSWORD: thistwo
-      INFLUXDB_USER: and_changetwo
-      INFLUXDB_USER_PASSWORD: this_tootwo      
-      
+            
     ports:
       - "8082:8082"
       - "8086:8086"
