--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,7 +28,7 @@ services:
   influxdb:
     build: ./influx
     image: localbuild/influxdb:april2021
-    container_name: influxdb
+    container_name: influxdb_test
     restart: unless-stopped
     environment:
       INFLUXDB_DB: DBONE_test
