--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,18 +1,19 @@
 ##########################################################
 version: "3"
 services:
-  influxdb:
+##########################################################      
+  influxdb_2:
     build: ./influx
     image: localbuild/influxdb:april2021
-    container_name: influxdb_test_3
+    container_name: influxdb_2
     restart: unless-stopped
     environment:
-      INFLUXDB_DB: DBONE_test_3
+      INFLUXDB_DB: DBONE_2
       INFLUXDB_HTTP_AUTH_ENABLED: "true"
-      INFLUXDB_ADMIN_USER: change_test_3
-      INFLUXDB_ADMIN_PASSWORD: this_test_3
-      INFLUXDB_USER: and_change_test_3
-      INFLUXDB_USER_PASSWORD: this_too_test_3
+      INFLUXDB_ADMIN_USER: change_2
+      INFLUXDB_ADMIN_PASSWORD: this_2
+      INFLUXDB_USER: and_change_2
+      INFLUXDB_USER_PASSWORD: this_too_2
             
     ports:
       - "8082:8082"
@@ -21,10 +22,14 @@ services:
     volumes:
       - influxData:/var/lib/influxdb
     networks: 
-      - edge          
+      - edge_2         
+##########################################################    
+#Create internal link network for Containers
+networks:
+  edge_2:
 ##########################################################
 #Create Volumes for persistent Storage
 volumes:
   influxData:
-  
+
 
