--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,10 +5,10 @@ services:
   influxdb_2:
     build: ./influx
     image: localbuild/influxdb:april2021
-    container_name: influxdb_2
+    container_name: influxdb
     restart: unless-stopped
     environment:
-      INFLUXDB_DB: DBONE_2
+      INFLUXDB_DB: DBONE_1, DBONE_2 
       INFLUXDB_HTTP_AUTH_ENABLED: "true"
       INFLUXDB_ADMIN_USER: change_2
       INFLUXDB_ADMIN_PASSWORD: this_2
