--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,54 @@
 ##########################################################
 version: "3"
 services:
+  nodered: 
+    build: ./nodered
+    image: localbuild/nodered:april2021
+    container_name: nodered
+    restart: unless-stopped
+    ports: 
+      - "1880:1880"
+    volumes:
+      - noderedData:/data
+ ##########################################################     
+  grafana:
+    build: ./grafana
+    image: localbuild/grafana:april2021
+    container_name: grafana
+    restart: unless-stopped
+    ports:
+      - "3000:3000"
+    volumes: 
+      - grafanaData:/var/lib/grafana
 ##########################################################      
-  influxdb_2:
+  influxdb:
     build: ./influx
     image: localbuild/influxdb:april2021
-    container_name: influxdb
+    container_name: influxdb_1
     restart: unless-stopped
     environment:
-      INFLUXDB_DB: DBONE_1, DBONE_2 
+      INFLUXDB_DB: DBONE_1
+      INFLUXDB_HTTP_AUTH_ENABLED: "true"
+      INFLUXDB_ADMIN_USER: change_1
+      INFLUXDB_ADMIN_PASSWORD: this_1
+      INFLUXDB_USER: and_change_1
+      INFLUXDB_USER_PASSWORD: this_too_1
+            
+    ports:
+      - "8082:8082"
+      - "8086:8086"
+      - "8089:8089"
+    volumes:
+      - influxData:/var/lib/influxdb
+      
+##########################################################      
+  influxdb:
+    build: ./influx
+    image: localbuild/influxdb:april2021
+    container_name: influxdb_2
+    restart: unless-stopped
+    environment:
+      INFLUXDB_DB: DBONE_2
       INFLUXDB_HTTP_AUTH_ENABLED: "true"
       INFLUXDB_ADMIN_USER: change_2
       INFLUXDB_ADMIN_PASSWORD: this_2
@@ -20,16 +60,32 @@ services:
       - "8086:8086"
       - "8089:8089"
     volumes:
-      - influxData:/var/lib/influxdb
-    networks: 
-      - edge_2         
-##########################################################    
-#Create internal link network for Containers
-networks:
-  edge_2:
+      - influxData:/var/lib/influxdb      
+##########################################################     
+
+  mosquitto:
+    build: ./mosquitto
+    image: localbuild/mosquitto:april2021
+    container_name: mosquitto  
+    restart: always
+    ports:
+      - "1883:1883"
+      - "9001:9001"  
+    volumes:    
+#old:    
+#      - /home/daniel/EDMA_Docker_0.1/mqtt/config:/mosquitto/config
+#      - /home/daniel/EDMA_Docker_0.1/mqtt/data:/mosquitto/data
+#      - /home/daniel/EDMA_Docker_0.1/mqtt/log:/mosquitto/log     
+    
+      - /EDMA_Docker_0.1/mqtt/config:/mosquitto/config
+      - /EDMA_Docker_0.1/mqtt/data:/mosquitto/data
+      - /EDMA_Docker_0.1/mqtt/log:/mosquitto/log                   
 ##########################################################
 #Create Volumes for persistent Storage
 volumes:
+  grafanaData:
+  noderedData:
   influxData:
-
-
+  config:
+  data:
+  log:  
