--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,8 @@ services:
       - "1880:1880"
     volumes:
       - noderedData:/data
+    networks: 
+      - edge      
  ##########################################################     
   grafana:
     build: ./grafana
@@ -20,12 +22,15 @@ services:
       - "3000:3000"
     volumes: 
       - grafanaData:/var/lib/grafana
+    networks: 
+      - edge      
 ##########################################################      
   influxdb:
     build: ./influx
     image: localbuild/influxdb:april2021
     container_name: influxdb_1
     restart: unless-stopped
+    
     environment:
       INFLUXDB_DB: DBONE_1
       INFLUXDB_HTTP_AUTH_ENABLED: "true"
@@ -33,20 +38,19 @@ services:
       INFLUXDB_ADMIN_PASSWORD: this_1
       INFLUXDB_USER: and_change_1
       INFLUXDB_USER_PASSWORD: this_too_1
-            
+
     ports:
       - "8082:8082"
       - "8086:8086"
       - "8089:8089"
     volumes:
       - influxData:/var/lib/influxdb
-      
-##########################################################      
-  influxdb:
+
     build: ./influx
     image: localbuild/influxdb:april2021
     container_name: influxdb_2
     restart: unless-stopped
+    
     environment:
       INFLUXDB_DB: DBONE_2
       INFLUXDB_HTTP_AUTH_ENABLED: "true"
@@ -54,15 +58,19 @@ services:
       INFLUXDB_ADMIN_PASSWORD: this_2
       INFLUXDB_USER: and_change_2
       INFLUXDB_USER_PASSWORD: this_too_2
+      INFLUXDB_INIT_RETENTION: 1h
             
     ports:
       - "8082:8082"
       - "8086:8086"
       - "8089:8089"
     volumes:
-      - influxData:/var/lib/influxdb      
-##########################################################     
-
+      - influxData:/var/lib/influxdb
+    networks: 
+      - edge       
+            
+##########################################################      
+  
   mosquitto:
     build: ./mosquitto
     image: localbuild/mosquitto:april2021
@@ -79,7 +87,10 @@ services:
     
       - /EDMA_Docker_0.1/mqtt/config:/mosquitto/config
       - /EDMA_Docker_0.1/mqtt/data:/mosquitto/data
-      - /EDMA_Docker_0.1/mqtt/log:/mosquitto/log                   
+      - /EDMA_Docker_0.1/mqtt/log:/mosquitto/log      
+      
+    networks: 
+      - edge      
 ##########################################################
 #Create Volumes for persistent Storage
 volumes:
