--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,7 +25,7 @@ services:
     networks: 
       - edge      
 ##########################################################      
-  influxdb:
+  influxdb_1:
     build: ./influx
     image: localbuild/influxdb:april2021
     container_name: influxdb_1
@@ -38,7 +38,6 @@ services:
       INFLUXDB_ADMIN_PASSWORD: this_1
       INFLUXDB_USER: and_change_1
       INFLUXDB_USER_PASSWORD: this_too_1
-      INFLUXDB_INIT_RETENTION: 1h
 
     ports:
       - "8082:8082"
@@ -46,11 +45,36 @@ services:
       - "8089:8089"
       
     volumes:
-      - influxData:/var/lib/influxdb
+      - influxData_1:/var/lib/influxdb_1
       
     networks: 
       - edge       
-            
+   ##########################################################      
+  influxdb_2:
+    build: ./influx
+    image: localbuild/influxdb:april2021
+    container_name: influxdb_2
+    restart: unless-stopped
+    
+    environment:
+      INFLUXDB_DB: DBONE_2
+      INFLUXDB_HTTP_AUTH_ENABLED: "true"
+      INFLUXDB_ADMIN_USER: change_2
+      INFLUXDB_ADMIN_PASSWORD: this_2
+      INFLUXDB_USER: and_change_2
+      INFLUXDB_USER_PASSWORD: this_too_2
+      INFLUXDB_INIT_RETENTION: 1h
+
+    ports:
+      - "8083:8083"
+      - "8087:8087"
+      - "8090:8090"
+      
+    volumes:
+      - influxData_2:/var/lib/influxdb_2
+      
+    networks: 
+      - edge              
 ##########################################################      
   
   mosquitto:
@@ -74,11 +98,16 @@ services:
     networks: 
       - edge      
 ##########################################################
+#Create internal link network for Containers
+networks:
+  edge:
+##########################################################
 #Create Volumes for persistent Storage
 volumes:
   grafanaData:
   noderedData:
-  influxData:
+  influxData_1:
+  influxData_2:  
   config:
   data:
   log:  
